# Hardware-Tool-Concept

./: .coderabbit.yaml  .gitignore  Cargo.toml  LICENSE  MASTER_CHECKLIST.md
crates/hwt-cli/: Cargo.toml
crates/hwt-cli/src/: commands.rs  main.rs
crates/hwt-core/: Cargo.toml
crates/hwt-core/src/: circuit.rs  component.rs  constraint.rs  domain.rs  geometry.rs  kicad.rs  layout.rs  lib.rs  net.rs  pdf_export.rs  png_export.rs  project.rs  routing.rs  svg_export.rs  units.rs
crates/hwt-render/: Cargo.toml
crates/hwt-render/src/: camera.rs  lib.rs  plugin.rs  viewer.rs
crates/hwt-ui/: Cargo.toml
crates/hwt-ui/src/: app.rs  domain_mode.rs  lib.rs  main.rs
crates/hwt-ui/ui/: canvas.slint  main.slint  right_sidebar.slint  schematic_editor.slint  theme.slint  title_bar.slint
docs/: README.md
docs/3d-visualization/: 3d-pcb-viewer.md  shared-3d-viewer-architecture.md
docs/advanced-features/: documentation-generation.md  realtime-preview.md  shared-drc-architecture.md  shared-export-import-architecture.md  shared-realtime-sync-architecture.md  shared-simulation-architecture.md  testing-debug.md  thermal-simulation.md
docs/advanced-packaging/: README.md  chiplet-integration.md
docs/advanced-packaging/3d-visualization-thermal/: 3d-package-viewer.md  thermal-mechanical-export-import.md
docs/advanced-packaging/die-editor/: die-ip-and-libraries.md  tsv-and-microbump-connectivity.md
docs/advanced-packaging/manufacturing-output/: assembly-data-generation.md  odb-packaging-export.md
docs/core-architecture/: cloud-server-architecture.md  compatibility-strategy.md  constraint-management.md  data-model-specification.md  localization-i18n.md  manufacturing-integration.md  netlist-formats.md  pdk-process-integration.md  plugin-extension-architecture.md  project-structure-management.md  shared-library-architecture.md  shared-module-consolidation.md  shared-project-architecture.md
docs/ic-design/: README.md  integrated-circuit-design.md
docs/ic-design/3d-visualization-parasitics/: 3d-ic-viewer.md  parasitic-extraction.md
docs/ic-design/analog-mixed-signal/: physical-verification-drc-lvs.md
docs/ic-design/rtl-logic-design/: timing-analysis.md
docs/mems-sensors/: README.md  mems-sensor-design.md
docs/mems-sensors/3d-visualization-packaging/: 3d-mems-viewer.md  mems-packaging-integration.md
docs/mems-sensors/layout-concepts/: mems-design-rule-check.md
docs/pcb-layout/: drc.md  footprints-libraries.md
docs/quantum-hardware/: README.md  quantum-circuit-design.md
docs/quantum-hardware/3d-visualization-cryogenics/: 3d-qubit-viewer.md  cryogenic-integration-export-import.md
docs/quantum-hardware/advanced-features/: qubit-calibration.md
docs/quantum-hardware/layout-concepts/: coherence-time-analysis.md
docs/quantum-hardware/manufacturing-output/: gdsii-quantum-export.md  qiskit-pulse-export.md
docs/rf-photonics/: README.md  rf-microwave-design.md
docs/rf-photonics/3d-visualization-em/: 3d-rf-viewer.md  em-field-simulation.md
docs/rf-photonics/core-architecture/: waveguide-layout-workflow.md
docs/rf-photonics/layout-concepts/: photonic-waveguide-design.md
docs/rf-photonics/manufacturing-output/: gerber-rf-export.md  s-parameter-data-generation.md
docs/schematic-editor/: spice-simulation.md  symbols-libraries.md
(+2 files in other folders)
