[package]
name = "hwt-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Command-line interface for Hardware Tool"

[[bin]]
name = "hwt"
path = "src/main.rs"

[dependencies]
hwt-core = { path = "../hwt-core" }
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
