[package]
name = "hwt-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core data model and Circuit JSON IR for Hardware Tool"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
glam.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
